force-app/main/default/objects/DBA__c/DBA__c.object-meta.xml
<CustomObject>
    <label>DBA</label>
    <nameField>
        <label>DBA Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>DBAs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>