force-app/main/default/objects/DBA__c/fields/Attachment_Identifier_TA__c.field-meta.xml
<CustomField>
    <fullName>Attachment_Identifier_TA__c</fullName>
    <description>build formula to identify the attachments that should be requested when a registration DBA is added. This field is used by the Registration Child Object Attachment Request flow to create attachment requests</description>
    <formula>IF( Registration__r.RecordType.DeveloperName  == &#39;Talent_Agency&#39;, &#39;;TA-FBNS&#39;, &#39;&#39;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Attachment Identifier_TA</label>
    <type>Text</type>
</CustomField>