force-app/main/default/objects/DBA__c/fields/Legacy_Name__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Name__c</fullName>
    <description>Used for data migration. Stores the original Account name from the imported database because the Case Role object limits the Account name to 80 characters.</description>
    <label>Legacy Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>