force-app/main/default/objects/DBA__c/validationRules/DBA_Name_is_Required.validationRule-meta.xml
<ValidationRule>
    <fullName>DBA_Name_is_Required</fullName>
    <active>true</active>
    <description>Requires DBA Name upon record creation in Registration forms.</description>
    <errorConditionFormula>ISBLANK( Name )</errorConditionFormula>
    <errorMessage>Please enter a DBA name.</errorMessage>
</ValidationRule>